--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,8 +1,38 @@
+
 <h2>Products</h2>
 
 
+<!-- This is a for each loop out ot the products.ts json file -->
+<div *ngFor="let product of products">
+  <h3>
+    <a [title]="product.name + ' details'">
+      {{product.name}}
+    </a>
+  </h3>
+
+<!-- This is an if statement that checks if there is a description for a product -->
+  <p *ngIf="product.description">
+    Description: {{product.description}}
+  </p>
+
+  <button (click)="share()">
+    Share
+  </button>
+
+  <app-product-alerts
+    [product]="product">
+  </app-product-alerts>
+</div>
 <!-- 
-Copyright Google LLC. All Rights Reserved.
-Use of this source code is governed by an MIT-style license that
-can be found in the LICENSE file at http://angular.io/license
+<input type="text" ng-model="name">
+<h2>Hello {{name}}!</h2> -->
+
+<!-- 
+Five common features of Angular's template syntax:
+--------------------------------------------------
+*ngFor
+*ngIf
+Interpolation {{ }}
+Property binding [ ]
+Event binding ( )
 -->
